--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
-        <title>Simple JS App</title>
+        <title>Pokemon Index - Project</title>
       </head>
       <body>
           <script src="js/scripts.js"></script>
