--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
         <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@100&display=swap" rel="stylesheet">
         <title>Pokemon Index - Project</title>
       </head>
-      <body>
-          <script src="js/scripts.js"></script>
-      </body>
+     <body> 
+        <header>
+            <img src="img/logo.svg"  alt="Pokemon rolodex logo" width="200" class="header__item">
+            <h1 class="header__item">Tim Gray's Pokemon Index</h1>
+        </header>
+        <main>
+            <h2>Here's who I have so far;</h2>
+            <script src="js/scripts.js"></script>
+        </main>
+      <footer>
+        <h3>Gotta Catch Them All!</h3>
+      </footer>
+      
+    </body>
 </html>
