--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </header>
         <main>
             <h2>Here's who I have so far;</h2>
+            <ul class="pokemon-list"></ul>
             <script src="js/scripts.js"></script>
         </main>
       <footer>
