--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com"> 
         <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@100&display=swap" rel="stylesheet">
         <title>Pokemon Index - Project</title>
-      </head>
+    </head>
      <body> 
         <header>
             <img src="img/logo.svg"  alt="Pokemon rolodex logo" width="200" class="header__item">
@@ -16,11 +16,12 @@
         <main>
             <h2>Here's who I have so far;</h2>
             <ul class="pokemon-list"></ul>
-            <script src="js/scripts.js"></script>
         </main>
-      <footer>
-        <h3>Gotta Catch Them All!</h3>
-      </footer>
-      
-    </body>
+        <footer>
+          <h3>Gotta Catch Them All!</h3>
+        </footer>
+            <script src="js/fetch-polyfill.js"></script>
+            <script src="js/promise-polyfill.js"></script>
+            <script src="js/scripts.js"></script>
+     </body>   
 </html>
