--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         </header>
         <main>
             <h2>Here's who I have so far;</h2>
+            <div class="modal-container">    
+            <!--  <div class="modal">
+                    <button class="modal-close"></button>
+                    <h3>Title</h3>
+                    <p>Text</p>
+                </div>  -->
+           </div>
             <ul class="pokemon-list"></ul>
         </main>
         <footer>
