--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;1,700&display=swap" rel="stylesheet">
         <title>Pokemon Index - Project</title>
     </head>
-     <body> 
+     <body class="body"> 
         <header>
         </header>    
         <div>
@@ -35,7 +35,7 @@
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                      <button type="button" class="btn btn-primary"></button>
+                      <!-- <button type="button" class="btn btn-primary"></button> -->
                     </div>
                   </div>
                 </div>
