--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-            <script src="js/fetch-polyfill.js"></script>
-            <script src="js/promise-polyfill.js"></script>
-            <script src="js/scripts.js"></script>
+            <script src="dist/fetch-polyfill.js"></script>
+            <script src="dist/promise-polyfill.js"></script>
+            <script src="dist/script.zip.js"></script>
      </body>   
 </html>
