--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com"> 
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;1,700&display=swap" rel="stylesheet">
         <title>Pokemon Index - Project</title>
+        <link rel="shortcut icon" type="image/jpg" href="img/pokeball-favicon.png"/>
     </head>
      <body class="body"> 
         <header>
